@@ -30,7 +30,7 @@ import export.*;
     You should have received a copy of the GNU General Public License
     along with FidoCadJ.  If not, see <http://www.gnu.org/licenses/>.
 
-	Copyright 2007-2010 by Davide Bucci
+	Copyright 2007-2013 by Davide Bucci
 </pre>
 
 @author Davide Bucci
@@ -276,7 +276,7 @@ public final class PrimitiveRectangle extends GraphicPrimitive
 		Vector<ParameterDescription> v=super.getControls();
 		ParameterDescription pd = new ParameterDescription();
 
-		pd.parameter=new Boolean(isFilled);
+		pd.parameter=Boolean.valueOf(isFilled);
 		pd.description=Globals.messages.getString("ctrl_filled");
 		v.add(pd);
 		
